// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu props :active 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :collapsed 1`] = `
<div class="t-default-menu t-default-menu t-menu--light t-is-collapsed" style="height: 100%; width: 64px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :collapsedWidth 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :height 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 750px; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :theme 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :theme 2`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu props :width 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu slot <default> 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu">
      <div></div>
    </ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu slot <logo> 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo">
      <div></div>
    </div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options"></div>
  </div>
</div>
`;

exports[`Menu slot <options> 1`] = `
<div class="t-default-menu t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo"></div>
    <ul class="t-menu"></ul>
    <div class="t-menu__options">
      <div></div>
    </div>
  </div>
</div>
`;
